--- a/html/quiz02.html
+++ b/html/quiz02.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quiz02</title>
+    <title>회사 소개</title>
 </head>
-<body>
-    <table border="1">
-        <tr>
-            <th colspan="5" align="center">IT시간표</th>
-        </tr>
-         <tr>
-            <td></td><td align="center"><b>401</b></td><td align="center"><b>402</b></td><td align="center"><b>403</b></td><td align="center"><b>404</b></td>
-        </tr>
-         <tr>
-            <td>09:00-12:00</td><td rowspan="4" align="center">공사중</tr>td><td>내용</td><td rowspan="2">네트워크보안실무자 양성</td>                 <td>보충훈련 과정(OS/네트워크)</td>
-        </tr>
-         <tr>
-            <td>12:30-15:30</td><td>내용</td>                      <td>보충훈련 과정(언어계열)</td>
-        </tr>
-                </tr>
-         <tr>
-            <td>15:30-18:30</td><td>내용</td><td rowspan="2">가상화 시스템엔지니어 실무자 양성</td><td>리눅스</td>
-        </tr>
-                </tr>
-         <tr>
-            <td>19:00-22:00</td><td>내용</td>                      <td>서버</td>
-        </tr>
+<body bgcolor="skyblue">
+<h1>HTML 연습</h1>
+<table width="90%" align="center" bgcolor="yellow">
+    <tr>
+        <td colspan="3" align="center">
+            <font size="7" color="blue"><b>회사 소개</b></font>
+            <hr width="30%" aling="center" color="hotpink"></hr>
+        </td>          
+    </tr>  
     </table>
-</body>
+    
+</body align="center">
+    <h1>-회사소개-</h1>
+        <h2>안녕하세요</h2><br><h2>HTML 회사 입니다</h2><br><h2>환영 합니다.</h2>
 </html>
